# video-presentation

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html
src/: aux.rs  common.rs  main.rs
