[package]
name = "video-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
shadow-clone = "1.2.1"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["HtmlVideoElement"] }
yew = { version = "0.21.0", features = ["csr"] }
